<resources>
    <string name="app_name">UnipiPLIShopping</string>
    <string name="action_settings">Settings</string>>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="vinyls">Vinyls</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="your_cart">Your Cart</string>
    <string name="Total">Total: €0.00</string>
    <string name="Complete_Order">Complete Order</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="_0">Some Text for _0</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="main_login">Login</string>
    <string name="main_signup">Signup</string>
    <string name="title_settings">Settings</string>
    <string name="font_size">Font Size</string>
    <string name="apply">Apply</string>
    <string name="signup_username">Username</string>
    <string name="signup_first_name">First Name</string>
    <string name="signup_last_name">Last Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>

    <string name="lady_gaga_mayhem">Lady Gaga\nMayhem</string>
    <string name="the_beatles_abbey_road">The Beatles\nAbbey Road</string>
    <string name="the_beatles_let_it_be">The Beatles\nLet It Be</string>
    <string name="panic_death_of_a_bachelor">Panic! At The Disco\nDeath of a Bachelor</string>
    <string name="mac_miller_balloonerism">Mac Miller\nBalloonerism</string>
    <string name="manos_chatzidakis_megalos_erotikos">Μάνος Χατζιδάκις\nΟ Μεγάλος Ερωτικός</string>
    <string name="tania_tsanaklidou_mama_gernao">Τάνια Τσανακλίδου\nΜαμά Γερνάω</string>
    <string name="queen_a_night_at_the_opera">Queen\nA Night at the Opera</string>
    <string name="ravel">Maurice Ravel\nRavel: Miroirs, Jeux D\'Eau, Pavane Pour Une Infante Défunte</string>
    <string name="gnx">Kendrick Lamar GNX</string>
    <string name="pink">Pink Floyd The Wall</string>

    <string name="dark_pop">Dark Pop</string>
    <string name="rock">Rock</string>
    <string name="alternative_indie">Alternative Indie</string>
    <string name="hip_hop_rap">Hip-Hop, Rap</string>
    <string name="folk_classical_entekhno">Folk, Classical, Entekhno</string>
    <string name="classical">Classical</string>
    <string name="hip">Hip Hop, Funk / Soul</string>
    <string name="prog">Rock, Progressive rock</string>

    <string name="date_7_march_2025">7 March 2025</string>
    <string name="date_26_september_1969">26 September 1969</string>
    <string name="date_8_may_1970">8 May 1970</string>
    <string name="date_15_january_2016">15 January 2016</string>
    <string name="date_17_january_2025">17 January 2025</string>
    <string name="date_march_1972">March 1972</string>
    <string name="date_october_1981">October 1981</string>
    <string name="date_21_november_1975">21 November 1975</string>
    <string name="date_29_november_2005">29 November 2005</string>
    <string name="date_22_november_2024">22 November 2024</string>
    <string name="date_30_november_1979">30 November 1979</string>

    <string name="velona_records">Velona Records</string>
    <string name="diskorama">DISKORAMA</string>
    <string name="underground_tales_records">Underground Tales Records</string>
    <string name="joe_records">Joe Records</string>
    <string name="vinyl_city">Vinyl City</string>

    <string name="nearby_store_title">Nearby Store!</string>
    <string name="nearby_store_text">You are %1$d meters away from %2$s</string>

    <string name="release_date_label">Release Date:</string>
    <string name="store_label">Store:</string>

    <string name="restart_required">Restart Required</string>
    <string name="restart_message">To apply the changes, the application needs to restart. Do you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="login_signup">Signup</string>

    <string name="order_completed">The order has been completed!</string>
    <string name="order_line_success">The order lines were successfully recorded!</string>
    <string name="order_line_failure">Failed to record order lines.</string>
    <string name="order_success">The order was successfully recorded!</string>
    <string name="order_failure">Failed to record the order.</string>
    <string name="total_price">Total</string>

    <string name="user_added_success">User added successfully!</string>
    <string name="error_adding_user">Error during insertion!</string>

    <string name="error_checking_username">Error while checking username</string>

    <string name="fill_all_fields">Please fill in all fields!</string>
    <string name="passwords_must_match">Passwords must be identical!</string>
    <string name="invalid_email">Invalid email format!</string>
    <string name="username_exists">Username already exists! Pick another username!</string>

    <string name="login_success">Login Successful</string>
    <string name="invalid_credentials">Invalid Credentials</string>

    <string name="location_permission_required">Location permission is required!</string>

    <string name="edit_your_profile">Your Profile</string>
    <string name="login_title">Login</string>

    <string name="create_account">Create Account</string>

    <string name="select_language">Select Language</string>

    <string name="back">Back</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>