<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#122021">

    <!-- Τίτλος Settings -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:padding="16dp"
        android:gravity="center"/>

    <!-- Μέγεθος Γραμματοσειράς -->
    <TextView
        android:id="@+id/sampleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="24dp" />

    <SeekBar
        android:id="@+id/fontSizeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="24"
        android:progress="4"
        android:thumbTint="#FFFFFF"
        android:textColor="#e74c3c"
        android:progressTint="#FFFFFF" />

    <!-- Γραμμή Χωρίσματος -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="#556B2F" />

    <!-- Τίτλος για το Spinner -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:popupBackground="#556B2F"
        android:layout_gravity="center"
        android:backgroundTint="#FFFFFF"
        android:theme="@style/SpinnerStyle"/>

    <!-- Γραμμή Χωρίσματος -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="#556B2F"  />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:textColor="#FFFFFF"
        android:backgroundTint="#556B2F"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:layout_marginTop="16dp"/>
</LinearLayout>
